--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
 
   <link rel="stylesheet" href="/static/css/normalize.css">
   <link rel="stylesheet" href="/static/css/styles.css">
+
+  <link rel="shortcut icon" type="image/jpg" href="/ico/screenshot-32x32"/>
   
 </head>
 <body>
