--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/static/css/normalize.css">
   <link rel="stylesheet" href="/static/css/styles.css">
 
-  <link rel="shortcut icon" type="image/jpg" href="/ico/screenshot-32x32"/>
+  <link rel="shortcut icon" href="{{ url_for('static', filename='/ico/screenshot-32x32') }}"/>
   
 </head>
 <body>
