--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -11,7 +11,7 @@
       <form name="login_form">
 
         <label for="email">E-mail</label>
-        <input type="email" name="email" class="field" required>
+        <input type="email" name="email" id="darker-field" class="field" required>
 
         <label for="password">Password</label>
         <input type="password" name="password" class="field" required>
