--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,13 @@
   <title>Flask Diabetes Tool v1</title>
 
   <link rel="stylesheet" href="/static/css/normalize.css">
-  <link rel="stylesheet" href="/static/css/styles.css">
+  <link rel="stylesheet" href="/static/css/styles2.css">
 
   <link rel="shortcut icon" href="{{ url_for('static', filename='/ico/screenshot-32x32') }}"/>
   
 </head>
 <body>
+
   {% block content %}
     {# Template inserted here #}
   {% endblock %}
