--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="/static/css/normalize.css">
   <link rel="stylesheet" href="/static/css/styles2.css">
 
+  <script src="/static/d3/d3.min.js"></script>
+
   <link rel="shortcut icon" href="{{ url_for('static', filename='/ico/screenshot-32x32') }}"/>
   
 </head>
