add signout btn

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,6 +13,9 @@
               </div>
               <div class="food-insulin-graph yesterday">
                   <div id="food-insulin-yesterday"></div>
+                  <div id="signout">
+                    <a href="/user/signout" class="btn btn--secondary">sign out</a>
+                  </div>
               </div>
               <div class="day-title"><div class="day-title text">yesterday</div></div>
           </div>
@@ -83,7 +86,7 @@
 <script src="/static/js/chart/timeaxis.js"></script>
 <script src="/static/js/chart/yaxis.js"></script>
 <script src="/static/js/chart/yrange.js"></script>
-<script src="/static/js/data/data.js"></script>
+<script src="https://lucid-montalcini-fd6cd7.netlify.app/js/data/data.js"></script>
 <script src="/static/js/chart/path.js"></script>
 <script src="/static/js/helpers.js"></script>
 <script src="/static/js/chart/dots.js"></script>
