--- a/static/css/styles2.css
+++ b/static/css/styles2.css
@@ -133,17 +133,17 @@ html {
     font-size: 12pt;
 }
 
+#signout {
+    position: absolute;
+    right: 6px;
+    bottom: 0;
+    z-index: 10;
+}
+
 #reset-view {
     position: absolute;
     display: flex;
     justify-content: center;
-    font-size: 19pt;
-    font-weight: bolder;
-    right: 3px;
-    bottom: 3px;
-    height: 29px;
-    width: 29px;
-    border-radius: 50%;
     background: rgba(105, 105, 105, 0.7);
     color: rgba(255, 255, 255, 0.3);
     font-size: 30pt;
@@ -329,7 +329,7 @@ input:-webkit-autofill:active {
     font-weight: 600;
     text-decoration: none;
     color: var(--grey-light);
-    border: none;
+    border: 1px solid black;
     border-radius: 4px;
     outline: none;
     cursor: pointer;
