cleanup to rebuild structure of app

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <title>Flask Diabetes Tool v1</title>
 
   <link rel="stylesheet" href="/static/css/normalize.css">
-  <link rel="stylesheet" href="/static/css/styles2.css">
+  <link rel="stylesheet" href="/static/css/styles.css">
 
   <script src="/static/d3/d3.min.js"></script>
 
