--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -31,6 +31,7 @@ body {
   line-height: 28px;
   color: var(--black);
   background: var(--almost-black);
+  overflow: hidden;
 }
 
 /* Typography */
@@ -40,16 +41,16 @@ body {
 
 h1 {
   margin: 0.5em 0 1em;
-  font-size: 26px;
+  font-size: 22px;
   line-height: 1.2;
-  color: var(--almost-black);
+  color: var(--grey-medium);
 }
 
 h2 {
   margin: 0.5em 0 1em;
   font-size: 20px;
   line-height: 1.2;
-  color: var(--grey-dark);
+  color: var(--almost-black);
 }
 
 p {
@@ -184,4 +185,45 @@ input:-webkit-autofill:active  {
 input[type=submit] {
   margin: 34px auto 24px;
   display: block;
+}
+
+/* Menus */
+.top-navbar {
+  display: flex;
+  justify-content:space-between;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 5px 10px;
+  background-color: var(--grey-dark);
+  border: 1px solid var(--grey-medium);
+}
+
+.empty-left-container {
+  width: 35px;
+}
+
+.dropdown-container {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: var(--almost-black);
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
 }
