--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,16 @@
   
 </head>
 <body>
+  <div class="top-navbar">
+    <div class="empty-left-container"></div>
+    <h1>Flask Diabetes Tool v1</h1>
+    <div class="dropdown-container">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+    </div>
+    {% block menu %} {% endblock %}
+  </div>
 
   {% block content %}
     {# Template inserted here #}
