--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -40,14 +40,14 @@ body {
 }
 
 h1 {
-  margin: 0.5em 0 1em;
+  margin: 0.5em 0 0.5em;
   font-size: 22px;
   line-height: 1.2;
   color: var(--grey-medium);
 }
 
 h2 {
-  margin: 0.5em 0 1em;
+  margin: 0.5em 0 0.5em;
   font-size: 20px;
   line-height: 1.2;
   color: var(--almost-black);
@@ -191,6 +191,7 @@ input[type=submit] {
 .top-navbar {
   display: flex;
   justify-content:space-between;
+  align-items: center;
   top: 0;
   left: 0;
   width: 100%;
@@ -203,7 +204,7 @@ input[type=submit] {
   width: 35px;
 }
 
-.dropdown-container {
+.dropdown-menu {
   display: inline-block;
   cursor: pointer;
 }
