--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -6,22 +6,18 @@
 
     <div class="card">
 
-      <h2 class="center">Log In</h2>
+      <h2 class="center noselect">Log In</h2>
 
       <form name="login_form">
 
-        <label for="email">E-mail</label>
-        <input type="email" name="email" id="darker-field" class="field" required>
-
-        <label for="password">Password</label>
-        <input type="password" name="password" class="field" required>
-
-        <p class="error error--hidden"></p>
+        {% include '/login/loginfields.html' %}
 
         <div class="center"> 
           <input type="submit" value="Log In" class="btn">
-          or<br>
-          <a href="/signup">Create an Account</a>
+          <div class="center noselect">
+            or<br>
+            <a href="/signup">Create an Account</a>
+          </div>
         </div>
 
       </form>
@@ -30,7 +26,6 @@
 
   </div>
 
-  <script src="/static/js/jquery.js"></script>
   <script src="/static/js/scripts.js"></script>
 
 {% endblock %}
