--- a/templates/base.html
+++ b/templates/base.html
@@ -7,29 +7,18 @@
 
   <link rel="stylesheet" href="/static/css/normalize.css">
   <link rel="stylesheet" href="/static/css/styles.css">
-  <script src="{{ url_for('static', filename='/js/jquery.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
 
-  <link rel="shortcut icon" href="{{ url_for('static', filename='/ico/screenshot-32x32') }}"/>
+  <link rel="shortcut icon" href="{{ url_for('static', filename='ico/screenshot-32x32') }}"/>
   
 </head>
-<body>
-  <div class="top-navbar">
-    <div class="empty-left-container"></div>
-    <h1>Flask Diabetes Tool v1</h1>
-    <div class="dropdown-menu">
-      <div class="bar1"></div>
-      <div class="bar2"></div>
-      <div class="bar3"></div>
-    </div>
-    {% block menu %} {% endblock %}
-  </div>
+  <body>
+    
+    {% include 'navbar.html' %}
+    {% block content %} {% endblock %}
 
-  {% block content %}
-    {# Template inserted here #}
-  {% endblock %}
+  </body>
 
-</body>
-
-<script src="{{ url_for('static', filename='/js/menu.js') }}"></script>
+  {% block scripts %} {% endblock %}
 
 </html>
