--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -193,6 +193,29 @@ input:-webkit-autofill:active  {
   background: var(--secondary-dark);
 }
 
+.btn--plus {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 50%;
+  bottom: 0;
+  margin-bottom: 10px;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  padding: 11px;
+  font-size: 45px;
+  font-weight: 600;
+  text-decoration: none;
+  color: var(--almost-white);
+  box-shadow: 0 0 10px var(--almost-black);
+  cursor: pointer;
+  background: var(--primary);
+  transform: translate(-50%);
+  transition: color .15s ease, background-color .15s ease;
+}
+
 input[type=submit] {
   margin: 34px auto 24px;
   display: block;
@@ -208,7 +231,6 @@ input[type=submit] {
   width: 100%;
   padding: 5px 10px;
   background-color: var(--grey-dark);
-  border: 1px solid var(--grey-medium);
 }
 
 .empty-left-container {
