--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,6 +12,12 @@
             </div>
         </div>
     </div>
+
+    <div class="btn btn--plus">
+        <div>
+            +
+        </div>
+    </div>
 {% endblock %}
 
 {% block scripts %}
