--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,25 +1,20 @@
 {% extends "base.html" %}
 
+{% block header %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/graph/styles.css') }}">
+{% endblock header %}
+
 {% block content %}
-    <div class="card-wrapper">
-        <div class="card">
-            <h2 class="center noselect">Dashboard</h2>
-            <p>
-                <strong>User:</strong> {{ session.user.name }} <br>
-            </p>
-            <div class="center">
-                <a href="/user/signout" class="btn btn--secondary">Log out</a>
-            </div>
-        </div>
-    </div>
+
+    {% include "graph/graph.html" %}
 
     <div class="btn btn--plus">
         <div>
             &#65291;
         </div>
     </div>
-{% endblock %}
+{% endblock content %}
 
 {% block scripts %}
     <script src="{{ url_for('static', filename='js/menu.js') }}"></script>
-{% endblock %}
+{% endblock scripts %}
