--- a/templates/graph/graph.html
+++ b/templates/graph/graph.html
@@ -1,4 +1,4 @@
-<div class="disable-select">
+<div class="disable-select graph">
   <div id="chart">
       <div class="verticalSplit lower">
           <div class="lowerChart">
