--- a/templates/graph/graph.html
+++ b/templates/graph/graph.html
@@ -1,3 +1,10 @@
+<div class="verticalSplit bottom">
+  <div class="flex container">
+      <div class="BG-stamp"></div>
+      <div class="last-BG-box"></div>
+      <div class="cumCals-box"></div>
+  </div>
+</div>
 <div class="disable-select graph">
   <div id="chart">
       <div class="verticalSplit lower">
