--- a/static/css/graph/styles.css
+++ b/static/css/graph/styles.css
@@ -37,17 +37,17 @@ html, body {
 .BG-graph {
     box-sizing: border-box;
     height: 60%;
-    padding: 2px 5px 2px 5px;
+    padding: 2px 0 2px 0;
 }
 .basal-graph {
     box-sizing: border-box;
     height: 15%;
-    padding: 1px 5px 1px 5px;
+    padding: 1px 0 1px 0;
 }
 .food-insulin-graph {
     box-sizing: border-box;
     height: 25%;
-    padding: 2px 5px 2px 5px;
+    padding: 2px 0 2px 0;
 }
 .day-title {
     position: absolute;
@@ -107,14 +107,14 @@ html, body {
     box-sizing: border-box;
     width: 100%;
     height: 50%;
-    padding: 3px 5px 3px 5px;
+    padding: 3px 0 3px 0;
 }
 .verticalSplit.upper {
     padding-top: 10px;
 }
 .verticalSplit.bottom {
     height: 20%;
-    padding-bottom: 5px;
+    padding: 3px;
 }
 .flex.container {
     display: flex;
@@ -142,6 +142,7 @@ html, body {
     position: absolute;
     display: flex;
     justify-content: center;
+    align-items: center;
     font-size: 19pt;
     font-weight: bolder;
     right: 3px;
