--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,7 +9,7 @@
     </div>
     <div class="dropdown-content">
       <a href="#">Test</a>
-      <a href="#">Another Test</a>
+      <a href="/user/signout">Sign Out</a>
     </div>
   </div>
 </div>
