--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,7 +8,7 @@
       <div class="bar3"></div>
     </div>
     <div class="dropdown-content">
-      <a href="#">Test</a>
+      <a href="https://lucid-montalcini-fd6cd7.netlify.app/">Link to old Netlify app</a>
       <a href="/user/signout">Sign Out</a>
     </div>
   </div>
