--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,13 +8,17 @@
 
     {% include "graph/graph.html" %}
 
-    <div class="btn btn--plus">
-        <div>
+    <div class="btn-plus">
+        <div class="plus-symbol">
             &#65291;
+        </div>
+        <div class="minus-symbol">
+            &#65293;
         </div>
     </div>
 {% endblock content %}
 
 {% block scripts %}
     <script src="{{ url_for('static', filename='js/menu.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/plusbtn.js') }}"></script>
 {% endblock scripts %}
