--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 </head>
   <body>
     
-    {% include 'navbar.html' %}
+    {% include 'topbar.html' %}
     {% block content %} {% endblock %}
 
   </body>
