--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,7 +8,13 @@
 
     {% include "graph/graph.html" %}
 
+      <!-- Input Panel -->
+        <div class="input-panel">
+            Form for entering data ...
+        </div>
+
     {% include "bottombar.html" %}
+
 {% endblock content %}
 
 {% block scripts %}
