--- a/static/css/graph/styles.css
+++ b/static/css/graph/styles.css
@@ -57,7 +57,7 @@ html, body {
     top: 0;
     padding: 5px;
     background: none;
-    z-index: 100;
+    z-index: 60;
     pointer-events: none;
 }
 .day-title.text {
@@ -169,7 +169,7 @@ html, body {
     left: 15px;
     top: 5px;
     color: #808080;
-    z-index: 100;
+    z-index: 60;
 }
 
 #drift-change-tooltip {
@@ -193,3 +193,19 @@ html, body {
         height: 35%;
     }
 }
+
+/* Input Panel */
+.input-panel {
+    display: none;
+    padding: 10px;
+    position: fixed;
+    top: 0;
+    height: calc(100% - 70px);
+    width: 100%;
+    background-color: var(--almost-black);
+    z-index: 90;
+  }
+  
+  .input-panel.activated {
+    display: block;
+  }
