fixed buggy click on BG input panel

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -21,4 +21,5 @@
     <script src="{{ url_for('static', filename='js/menu.js') }}"></script>
     <script src="{{ url_for('static', filename='js/plusbtn.js') }}"></script>
     <script src="{{ url_for('static', filename='js/selectTool.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bgmeter.js') }}"></script>
 {% endblock scripts %}
