--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -361,3 +361,42 @@ input[type=submit] {
 .activated .note {
   left: 88%;
 }
+
+/* Input Panel */
+.input-panel {
+  display: none;
+  padding: 10px;
+  position: fixed;
+  top: 0;
+  height: calc(100% - 70px);
+  width: 100%;
+  background-color: var(--almost-black);
+  z-index: 90;
+}
+
+.input-panel.activated {
+  display: block;
+}
+
+.BG-input {
+  padding: 70px;
+  font-size: 120px;
+  color: var(--almost-white);
+}
+
+.BG-meter {
+  margin: 50px 0;
+  height: 30%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.axisWhite path, line {
+  stroke: var(--almost-white);
+  stroke-width: 1px;
+}
+
+.axisWhite text {
+  fill: var(--almost-white);
+  font: 30px sans-serif;  
+  text-anchor: center; 
+} 
