fetch data from static netlify app

--- a/templates/graph/graph.html
+++ b/templates/graph/graph.html
@@ -81,7 +81,10 @@
   <script src="{{ url_for('static', filename='js/graph/chart/bolus.js') }}"></script>
   <script src="{{ url_for('static', filename='js/graph/chart/cumcals.js') }}"></script>
   <script src="{{ url_for('static', filename='js/graph/chart/tempbar.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/graph/data/data.js') }}"></script>
+  <!--
+      <script src="{{ url_for('static', filename='js/graph/data/data.js') }}"></script>
+  -->
+  <script src="https://lucid-montalcini-fd6cd7.netlify.app/js/data/data.js"></script>
   <script src="{{ url_for('static', filename='js/graph/helpers.js') }}"></script>
   <script src="{{ url_for('static', filename='js/graph/plot.js') }}"></script>
   <script src="{{ url_for('static', filename='js/graph/fields.js') }}"></script>
