adjust bg meter zoom lims

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -392,7 +392,15 @@ input[type=submit] {
 
 .axisWhite path, line {
   stroke: var(--almost-white);
-  stroke-width: 1px;
+  stroke-width: 1.5px;
+}
+
+.axisWhite.minor path, line {
+  stroke-width: 0.9px;
+}
+
+.axisWhite.extra path, line {
+  stroke-width: 0.5px;
 }
 
 .axisWhite text {
