--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -374,6 +374,11 @@ input[type=submit] {
   z-index: 90;
 }
 
+.input-body {
+  width: 100%;
+  height: 100%;
+}
+
 .input-panel.activated {
   display: block;
 }
@@ -387,7 +392,7 @@ input[type=submit] {
 .BG-meter {
   margin: 20px 0;
   height: 60%;
-  background-color: rgba(200, 200, 255, 0.2);
+  background-color: rgba(255,255,255,0.05);
 }
 
 .axisWhite path, line {
