fix graph load bug

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
       {% include 'topbar.html' %}
       <!-- Middle body -->
       <div class="middle-body">
-        {% block content %} {% endblock %}
+        {% block middleBody %} {% endblock %}
       </div>
       {% block bottom %} {% endblock %}
     </div>
