--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,7 +9,9 @@
     {% include "graph/graph.html" %}
     <!-- Input Panel -->
     <div class="input-panel">
-        <h1 class='center'>Enter BG</h1>
+        <div>
+            <h1 class='center'>Enter BG</h1>
+        </div>
         <div class="input-body"></div>
     </div>
 
