--- a/templates/topbar.html
+++ b/templates/topbar.html
@@ -1,6 +1,6 @@
 <div class="top-navbar">
   <div class="empty-left-container"></div>
-  <h1 class="noselect">Flask Diabetes Tool v1</h1>
+  <h1 class="noselect">Diabetes Tool v2</h1>
   <div class="dropdown-menu">
     <div class="menubtn">
       <div class="bar1"></div>
