--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -380,7 +380,7 @@ input[type=submit] {
   flex-direction: column;
 }
 
-.BG-value {
+.BG-value, .bolus-value {
   font-size: 70px;
   line-height: 1.2;
   color: var(--almost-white);
@@ -389,7 +389,7 @@ input[type=submit] {
 .meter-wrapper {
   padding: 10px;
 }
-.BG-meter {
+.BG-meter, .bolus-meter {
   width: 100%;
   height: 100%;
   background-color: rgba(255,255,255,0.05);
