--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -26,7 +26,8 @@
 {% block scripts %}
     <script src="{{ url_for('static', filename='js/menu.js') }}"></script>
     <script src="{{ url_for('static', filename='js/plusbtn.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/input-panels/meter.js') }}"></script>
     <script src="{{ url_for('static', filename='js/input-panels/selectTool.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/input-panels/bgmeter.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/input-panels/submitVals.js') }}"></script>
     {% include "graph/graphScripts.html" %}
 {% endblock scripts %}
