--- a/templates/graph/graph.html
+++ b/templates/graph/graph.html
@@ -1,5 +1,5 @@
 <div class="disable-select graph">
-  <div id="chart">
+  <div id="chart" class="activated">
     <div class="verticalSplit bottom">
       <div class="flex container">
           <div class="BG-stamp"></div>
